# Portfolio

./: README.md
Assignment 4: Security in Programming/: Course.cpp  Course.h  Gradebook.cpp  Student.cpp  Student.h
Final Project/IT 326/src/CRUDOps/: LNAccountCRUDOps.java  LNCommentCRUDOps.java  LNFileCRUDOps.java  LNFolderCRUDOps.java  LNNotificationCRUDOps.java
Final Project/IT 326/src/Controllers/: LNAccountController.java  LNCommentController.java  LNFileController.java  LNFolderController.java  LNNotificationController.java
Final Project/IT 326/src/Handlers/: LNAccountHandler.java  LNCommentHandler.java  LNFileHandler.java  LNFolderHandler.java  (+1 more)
Group Project 1/: C++ - Coding Standard.docx
Group Project 1/Group Project 1 Examples/: CTR52.cpp  CTR56.cpp  ERR56.cpp  EXP20.cpp  EXP60.cpp  EXP60.h  FIO50 file.txt  FIO50.cpp  MEM00.cpp  MEM51.cpp  MEM53.cpp  MEM55.cpp  MEM57.cpp  PRE09.cpp  PRE09.h  STR06.cpp
Group Project 1/Group Project 1 Program/: Bank.cpp  Bank.h  Banned Users.txt  Randomizer.cpp  User.cpp  User.h  main.cpp
NPC Reduction (Part C)/: findVCover.java
Project 3/: Project _3_Jackson_Clark.sql  Project_3.docx
lec04 Exercise/: lec04.pptx
lec04 Exercise/lec04_ex/src/: CMakeLists.txt
lec04 Exercise/lec04_ex/src/source/: lec04_ex1.cpp  lec04_ex2.cpp
lec07 Exercise/: lec07.pptx
lec07 Exercise/lec07_code/src/: CMakeLists.txt
lec09 Exercise/: lec09.pptx
lec09 Exercise/it356 wo9 (Exercise 1 + 2)/src/: CMakeLists.txt
lec10 Exercise/: lec10.pptx
lec10 Exercise/lec10_code/src/: CMakeLists.txt
lec12 Exercise/: lec12.pptx
lec12 Exercise/lec12_code/src/: CMakeLists.txt
lec17 Exercise/lec17_code/src/: CMakeLists.txt
lec21 Exercise/: lec21.pptx
lec21 Exercise/lec21_code/src/: CMakeLists.txt
lec22 Exercise/: lec22.pptx
lec22 Exercise/lec22_code/src/: CMakeLists.txt
lec26 Exercise/lec26_code/src/: CMakeLists.txt
(+121 files in other folders)
